--- a/css/index.css
+++ b/css/index.css
@@ -9,6 +9,91 @@
 
 body {
   font-family: "Poppins", sans-serif;
+  width: 100vw;
+  transition: 0.3s;
+}
+
+input[type=checkbox] {
+  display: none;
+}
+
+.bi {
+  font-size: 1.3rem;
+  cursor: pointer;
+}
+
+header {
+  width: 100vw;
+  height: 3.75rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 3rem 2.5rem;
+  box-shadow: 2px 4px 5px rgba(0, 0, 0, 0.4862745098);
+}
+
+#container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: calc(100vh - 6rem);
+}
+
+main {
+  display: flex;
+  width: 70%;
+}
+main .first-section, main .second-section {
+  width: 50%;
+}
+main .first-section {
+  background-color: rgba(227, 239, 229, 0.7803921569);
+  position: relative;
+}
+main .first-section img {
+  width: 550px;
+  transform: rotate(-25deg);
+  position: absolute;
+  top: 6rem;
+  left: -4rem;
+}
+main .first-section h1 {
+  padding: 2rem;
+  font-size: 4.5rem;
+}
+main .second-section {
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 0.7rem;
+}
+main .second-section h2 {
+  font-weight: 400;
+  font-size: 3rem;
+}
+main .second-section h4 {
+  text-transform: uppercase;
+  color: #8f8b8b;
+}
+main .second-section p {
+  font-weight: 300;
+}
+main .second-section div {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+main .second-section div p {
+  font-size: 1.5rem;
+  font-weight: 700;
+}
+main .second-section div button {
+  background-color: #000;
+  color: #fff;
+  padding: 1rem;
+  border-radius: 2rem;
+  cursor: pointer;
 }
 
 /*# sourceMappingURL=index.css.map */
