--- a/sass/style.sass
+++ b/sass/style.sass
@@ -8,3 +8,84 @@
 
 body
     font-family: 'Poppins', sans-serif
+    width: 100vw
+    transition: .3s
+
+input[type="checkbox"]
+    display: none
+
+// icons
+.bi
+    font-size: 1.3rem
+    cursor: pointer
+
+header
+    width: 100vw
+    height: 3.75rem
+    display: flex
+    justify-content: space-between
+    align-items: center
+    padding: 3rem 2.5rem
+    box-shadow: 2px 4px 5px #0000007c
+
+#container
+    display: flex
+    justify-content: center
+    align-items: center
+    height: calc( 100vh - 6rem )
+
+main
+    display: flex
+    width: 70%
+
+    .first-section, .second-section
+        width: 50%
+    
+    .first-section
+        background-color: #e3efe5c7
+        position: relative
+
+        img
+            width: 550px
+            transform: rotate(-25deg)
+            position: absolute
+            top: 6rem
+            left: -4rem
+
+        h1
+            padding: 2rem
+            font-size: 4.5rem
+    
+    .second-section
+        padding: 1rem
+        display: flex
+        flex-direction: column
+        justify-content: space-between
+        gap: .7rem
+
+        h2
+            font-weight: 400
+            font-size: 3rem
+        
+        h4
+            text-transform: uppercase
+            color: #8f8b8b
+
+        p
+            font-weight: 300
+        
+        div
+            display: flex
+            justify-content: space-between
+            align-items: center
+
+            p
+                font-size: 1.5rem
+                font-weight: 700
+
+            button
+                background-color: #000
+                color: #fff
+                padding: 1rem
+                border-radius: 2rem
+                cursor: pointer
