--- a/sass/style.sass
+++ b/sass/style.sass
@@ -19,6 +19,9 @@ input[type="checkbox"]
     font-size: 1.3rem
     cursor: pointer
 
+.bi-moon
+    display: none
+
 header
     width: 100vw
     height: 3.75rem
@@ -89,3 +92,23 @@ main
                 padding: 1rem
                 border-radius: 2rem
                 cursor: pointer
+
+// TEMA DARK
+.dark, .dark header
+    background-color: #263238
+    color: #fff
+
+.dark .bi-sun
+    display: none
+
+.dark .bi-moon
+    display: block
+
+.dark .first-section
+    background-color: #273035
+
+.dark .second-section
+    background: #37474f
+
+.dark .second-section h4
+    color: #67b4f3
